--- a/Makefile.lr
+++ b/Makefile.lr
@@ -1,4 +1,4 @@
-include Makefile.feature.feature4
+include Makefile.feature.feature2
 
 C = 0.1
 ALGO_NAME := lr_$(C)
@@ -47,155 +47,113 @@ submission: $(SUBMISSION_TST)
 retrain: clean_$(ALGO_NAME) submission
 
 $(PREDICT_TST00) $(PREDICT_VAL00): $(FEATURE_TRN00) $(FEATURE_TST00) \
-                                   $(FEATURE_VALTRN00) $(FEATURE_VALTST00) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_lr.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL00) \
                                   --predict-test-file $(PREDICT_TST00) \
                                   --C $(C)
 
 $(PREDICT_TST01) $(PREDICT_VAL01): $(FEATURE_TRN01) $(FEATURE_TST01) \
-                                   $(FEATURE_VALTRN01) $(FEATURE_VALTST01) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_lr.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL01) \
                                   --predict-test-file $(PREDICT_TST01) \
                                   --C $(C)
 
 $(PREDICT_TST02) $(PREDICT_VAL02): $(FEATURE_TRN02) $(FEATURE_TST02) \
-                                   $(FEATURE_VALTRN02) $(FEATURE_VALTST02) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_lr.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL02) \
                                   --predict-test-file $(PREDICT_TST02) \
                                   --C $(C)
 
 $(PREDICT_TST03) $(PREDICT_VAL03): $(FEATURE_TRN03) $(FEATURE_TST03) \
-                                   $(FEATURE_VALTRN03) $(FEATURE_VALTST03) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_lr.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL03) \
                                   --predict-test-file $(PREDICT_TST03) \
                                   --C $(C)
 
 $(PREDICT_TST04) $(PREDICT_VAL04): $(FEATURE_TRN04) $(FEATURE_TST04) \
-                                   $(FEATURE_VALTRN04) $(FEATURE_VALTST04) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_lr.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL04) \
                                   --predict-test-file $(PREDICT_TST04) \
                                   --C $(C)
 
 $(PREDICT_TST05) $(PREDICT_VAL05): $(FEATURE_TRN05) $(FEATURE_TST05) \
-                                   $(FEATURE_VALTRN05) $(FEATURE_VALTST05) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_lr.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL05) \
                                   --predict-test-file $(PREDICT_TST05) \
                                   --C $(C)
 
 $(PREDICT_TST06) $(PREDICT_VAL06): $(FEATURE_TRN06) $(FEATURE_TST06) \
-                                   $(FEATURE_VALTRN06) $(FEATURE_VALTST06) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_lr.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL06) \
                                   --predict-test-file $(PREDICT_TST06) \
                                   --C $(C)
 
 $(PREDICT_TST07) $(PREDICT_VAL07): $(FEATURE_TRN07) $(FEATURE_TST07) \
-                                   $(FEATURE_VALTRN07) $(FEATURE_VALTST07) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_lr.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL07) \
                                   --predict-test-file $(PREDICT_TST07) \
                                   --C $(C)
 
 $(PREDICT_TST08) $(PREDICT_VAL08): $(FEATURE_TRN08) $(FEATURE_TST08) \
-                                   $(FEATURE_VALTRN08) $(FEATURE_VALTST08) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_lr.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL08) \
                                   --predict-test-file $(PREDICT_TST08) \
                                   --C $(C)
 
 $(PREDICT_TST09) $(PREDICT_VAL09): $(FEATURE_TRN09) $(FEATURE_TST09) \
-                                   $(FEATURE_VALTRN09) $(FEATURE_VALTST09) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_lr.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL09) \
                                   --predict-test-file $(PREDICT_TST09) \
                                   --C $(C)
 
 $(PREDICT_TST10) $(PREDICT_VAL10): $(FEATURE_TRN10) $(FEATURE_TST10) \
-                                   $(FEATURE_VALTRN10) $(FEATURE_VALTST10) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_lr.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL10) \
                                   --predict-test-file $(PREDICT_TST10) \
                                   --C $(C)
 
 $(PREDICT_TST11) $(PREDICT_VAL11): $(FEATURE_TRN11) $(FEATURE_TST11) \
-                                   $(FEATURE_VALTRN11) $(FEATURE_VALTST11) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_lr.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL11) \
                                   --predict-test-file $(PREDICT_TST11) \
                                   --C $(C)
 
 $(PREDICT_TST12) $(PREDICT_VAL12): $(FEATURE_TRN12) $(FEATURE_TST12) \
-                                   $(FEATURE_VALTRN12) $(FEATURE_VALTST12) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_lr.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL12) \
                                   --predict-test-file $(PREDICT_TST12) \
                                   --C $(C)
 
 $(PREDICT_TST13) $(PREDICT_VAL13): $(FEATURE_TRN13) $(FEATURE_TST13) \
-                                   $(FEATURE_VALTRN13) $(FEATURE_VALTST13) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_lr.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL13) \
                                   --predict-test-file $(PREDICT_TST13) \
                                   --C $(C)
@@ -222,7 +180,7 @@ $(PREDICT_TST): $(PREDICT_TST00) $(PREDICT_TST01) $(PREDICT_TST02) \
                 $(PREDICT_TST12) $(PREDICT_TST13)
 	paste -d, $^ > $@
 
-$(METRIC_VAL): $(PREDICT_VAL) $(YS_VALTST) | $(DIR_METRIC)
+$(METRIC_VAL): $(PREDICT_VAL) $(YS_TRN) | $(DIR_METRIC)
 	./src/evaluate.py -t $(lastword $^) -p $< > $@
 	cat $@
 
