--- a/Makefile.gbm_bagging
+++ b/Makefile.gbm_bagging
@@ -1,4 +1,4 @@
-include Makefile.feature.feature10
+include Makefile.feature.feature5
 
 N = 40
 DEPTH = 7
@@ -49,12 +49,9 @@ submission: $(SUBMISSION_TST)
 retrain: clean_$(ALGO_NAME) submission
 
 $(PREDICT_TST00) $(PREDICT_VAL00): $(FEATURE_TRN00) $(FEATURE_TST00) \
-                                   $(FEATURE_VALTRN00) $(FEATURE_VALTST00) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_gbm_bagging.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL00) \
                                   --predict-test-file $(PREDICT_TST00) \
                                   --depth $(DEPTH) \
@@ -62,12 +59,9 @@ $(PREDICT_TST00) $(PREDICT_VAL00): $(FEATURE_TRN00) $(FEATURE_TST00) \
                                   --n-est $(N)
 
 $(PREDICT_TST01) $(PREDICT_VAL01): $(FEATURE_TRN01) $(FEATURE_TST01) \
-                                   $(FEATURE_VALTRN01) $(FEATURE_VALTST01) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_gbm_bagging.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL01) \
                                   --predict-test-file $(PREDICT_TST01) \
                                   --depth $(DEPTH) \
@@ -75,12 +69,9 @@ $(PREDICT_TST01) $(PREDICT_VAL01): $(FEATURE_TRN01) $(FEATURE_TST01) \
                                   --n-est $(N)
 
 $(PREDICT_TST02) $(PREDICT_VAL02): $(FEATURE_TRN02) $(FEATURE_TST02) \
-                                   $(FEATURE_VALTRN02) $(FEATURE_VALTST02) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_gbm_bagging.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL02) \
                                   --predict-test-file $(PREDICT_TST02) \
                                   --depth $(DEPTH) \
@@ -88,12 +79,9 @@ $(PREDICT_TST02) $(PREDICT_VAL02): $(FEATURE_TRN02) $(FEATURE_TST02) \
                                   --n-est $(N)
 
 $(PREDICT_TST03) $(PREDICT_VAL03): $(FEATURE_TRN03) $(FEATURE_TST03) \
-                                   $(FEATURE_VALTRN03) $(FEATURE_VALTST03) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_gbm_bagging.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL03) \
                                   --predict-test-file $(PREDICT_TST03) \
                                   --depth $(DEPTH) \
@@ -101,12 +89,9 @@ $(PREDICT_TST03) $(PREDICT_VAL03): $(FEATURE_TRN03) $(FEATURE_TST03) \
                                   --n-est $(N)
 
 $(PREDICT_TST04) $(PREDICT_VAL04): $(FEATURE_TRN04) $(FEATURE_TST04) \
-                                   $(FEATURE_VALTRN04) $(FEATURE_VALTST04) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_gbm_bagging.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL04) \
                                   --predict-test-file $(PREDICT_TST04) \
                                   --depth $(DEPTH) \
@@ -114,12 +99,9 @@ $(PREDICT_TST04) $(PREDICT_VAL04): $(FEATURE_TRN04) $(FEATURE_TST04) \
                                   --n-est $(N)
 
 $(PREDICT_TST05) $(PREDICT_VAL05): $(FEATURE_TRN05) $(FEATURE_TST05) \
-                                   $(FEATURE_VALTRN05) $(FEATURE_VALTST05) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_gbm_bagging.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL05) \
                                   --predict-test-file $(PREDICT_TST05) \
                                   --depth $(DEPTH) \
@@ -127,12 +109,9 @@ $(PREDICT_TST05) $(PREDICT_VAL05): $(FEATURE_TRN05) $(FEATURE_TST05) \
                                   --n-est $(N)
 
 $(PREDICT_TST06) $(PREDICT_VAL06): $(FEATURE_TRN06) $(FEATURE_TST06) \
-                                   $(FEATURE_VALTRN06) $(FEATURE_VALTST06) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_gbm_bagging.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL06) \
                                   --predict-test-file $(PREDICT_TST06) \
                                   --depth $(DEPTH) \
@@ -140,12 +119,9 @@ $(PREDICT_TST06) $(PREDICT_VAL06): $(FEATURE_TRN06) $(FEATURE_TST06) \
                                   --n-est $(N)
 
 $(PREDICT_TST07) $(PREDICT_VAL07): $(FEATURE_TRN07) $(FEATURE_TST07) \
-                                   $(FEATURE_VALTRN07) $(FEATURE_VALTST07) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_gbm_bagging.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL07) \
                                   --predict-test-file $(PREDICT_TST07) \
                                   --depth $(DEPTH) \
@@ -153,12 +129,9 @@ $(PREDICT_TST07) $(PREDICT_VAL07): $(FEATURE_TRN07) $(FEATURE_TST07) \
                                   --n-est $(N)
 
 $(PREDICT_TST08) $(PREDICT_VAL08): $(FEATURE_TRN08) $(FEATURE_TST08) \
-                                   $(FEATURE_VALTRN08) $(FEATURE_VALTST08) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_gbm_bagging.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL08) \
                                   --predict-test-file $(PREDICT_TST08) \
                                   --depth $(DEPTH) \
@@ -166,12 +139,9 @@ $(PREDICT_TST08) $(PREDICT_VAL08): $(FEATURE_TRN08) $(FEATURE_TST08) \
                                   --n-est $(N)
 
 $(PREDICT_TST09) $(PREDICT_VAL09): $(FEATURE_TRN09) $(FEATURE_TST09) \
-                                   $(FEATURE_VALTRN09) $(FEATURE_VALTST09) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_gbm_bagging.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL09) \
                                   --predict-test-file $(PREDICT_TST09) \
                                   --depth $(DEPTH) \
@@ -179,12 +149,9 @@ $(PREDICT_TST09) $(PREDICT_VAL09): $(FEATURE_TRN09) $(FEATURE_TST09) \
                                   --n-est $(N)
 
 $(PREDICT_TST10) $(PREDICT_VAL10): $(FEATURE_TRN10) $(FEATURE_TST10) \
-                                   $(FEATURE_VALTRN10) $(FEATURE_VALTST10) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_gbm_bagging.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL10) \
                                   --predict-test-file $(PREDICT_TST10) \
                                   --depth $(DEPTH) \
@@ -192,12 +159,9 @@ $(PREDICT_TST10) $(PREDICT_VAL10): $(FEATURE_TRN10) $(FEATURE_TST10) \
                                   --n-est $(N)
 
 $(PREDICT_TST11) $(PREDICT_VAL11): $(FEATURE_TRN11) $(FEATURE_TST11) \
-                                   $(FEATURE_VALTRN11) $(FEATURE_VALTST11) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_gbm_bagging.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL11) \
                                   --predict-test-file $(PREDICT_TST11) \
                                   --depth $(DEPTH) \
@@ -205,12 +169,9 @@ $(PREDICT_TST11) $(PREDICT_VAL11): $(FEATURE_TRN11) $(FEATURE_TST11) \
                                   --n-est $(N)
 
 $(PREDICT_TST12) $(PREDICT_VAL12): $(FEATURE_TRN12) $(FEATURE_TST12) \
-                                   $(FEATURE_VALTRN12) $(FEATURE_VALTST12) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_gbm_bagging.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL12) \
                                   --predict-test-file $(PREDICT_TST12) \
                                   --depth $(DEPTH) \
@@ -218,12 +179,9 @@ $(PREDICT_TST12) $(PREDICT_VAL12): $(FEATURE_TRN12) $(FEATURE_TST12) \
                                   --n-est $(N)
 
 $(PREDICT_TST13) $(PREDICT_VAL13): $(FEATURE_TRN13) $(FEATURE_TST13) \
-                                   $(FEATURE_VALTRN13) $(FEATURE_VALTST13) \
                                    | $(DIR_VAL) $(DIR_TST)
 	./src/train_predict_gbm_bagging.py --train-file $< \
                                   --test-file $(word 2, $^) \
-                                  --valid-train-file $(word 3, $^) \
-                                  --valid-test-file $(lastword $^) \
                                   --predict-valid-file $(PREDICT_VAL13) \
                                   --predict-test-file $(PREDICT_TST13) \
                                   --depth $(DEPTH) \
@@ -252,7 +210,7 @@ $(PREDICT_TST): $(PREDICT_TST00) $(PREDICT_TST01) $(PREDICT_TST02) \
                 $(PREDICT_TST12) $(PREDICT_TST13)
 	paste -d, $^ > $@
 
-$(METRIC_VAL): $(PREDICT_VAL) $(YS_VALTST) | $(DIR_METRIC)
+$(METRIC_VAL): $(PREDICT_VAL) $(YS_TRN) | $(DIR_METRIC)
 	./src/evaluate.py -t $(lastword $^) -p $< > $@
 	cat $@
 
