--- a/Makefile.esb.xg_grid
+++ b/Makefile.esb.xg_grid
@@ -1,4 +1,4 @@
-include Makefile.feature.esb
+include Makefile.feature.esb16
 
 ALGO_NAME := esb_xg_grid
 MODEL_NAME := $(ALGO_NAME)_$(FEATURE_NAME)
@@ -165,7 +165,7 @@ $(PREDICT_TST): $(PREDICT_TST00) $(PREDICT_TST01) $(PREDICT_TST02) \
                 $(PREDICT_TST12) $(PREDICT_TST13)
 	paste -d, $^ > $@
 
-$(METRIC_VAL): $(PREDICT_VAL) $(YS_VALTST) | $(DIR_METRIC)
+$(METRIC_VAL): $(PREDICT_VAL) $(YS_TRN) | $(DIR_METRIC)
 	./src/evaluate.py -t $(lastword $^) -p $< > $@
 	cat $@
 
