--- a/Makefile.feature.feature9
+++ b/Makefile.feature.feature9
@@ -1,69 +1,67 @@
 #--------------------------------------------------------------------------
-# feature3: categorical feature cutoff = 10
+# feature9: categorical feature cutoff = 10
 #--------------------------------------------------------------------------
 include Makefile
 
 FEATURE_NAME := feature9
 
-FEATURE_VALTRN00 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn00.ffm
-FEATURE_VALTST00 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst00.ffm
-FEATURE_VALTRN01 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn01.ffm
-FEATURE_VALTST01 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst01.ffm
-FEATURE_VALTRN02 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn02.ffm
-FEATURE_VALTST02 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst02.ffm
-FEATURE_VALTRN03 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn03.ffm
-FEATURE_VALTST03 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst03.ffm
-FEATURE_VALTRN04 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn04.ffm
-FEATURE_VALTST04 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst04.ffm
-FEATURE_VALTRN05 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn05.ffm
-FEATURE_VALTST05 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst05.ffm
-FEATURE_VALTRN06 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn06.ffm
-FEATURE_VALTST06 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst06.ffm
-FEATURE_VALTRN07 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn07.ffm
-FEATURE_VALTST07 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst07.ffm
-FEATURE_VALTRN08 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn08.ffm
-FEATURE_VALTST08 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst08.ffm
-FEATURE_VALTRN09 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn09.ffm
-FEATURE_VALTST09 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst09.ffm
-FEATURE_VALTRN10 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn10.ffm
-FEATURE_VALTST10 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst10.ffm
-FEATURE_VALTRN11 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn11.ffm
-FEATURE_VALTST11 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst11.ffm
-FEATURE_VALTRN12 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn12.ffm
-FEATURE_VALTST12 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst12.ffm
-FEATURE_VALTRN13 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn13.ffm
-FEATURE_VALTST13 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst13.ffm
+FEATURE_VALTRN00 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn00.sps
+FEATURE_VALTST00 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst00.sps
+FEATURE_VALTRN01 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn01.sps
+FEATURE_VALTST01 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst01.sps
+FEATURE_VALTRN02 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn02.sps
+FEATURE_VALTST02 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst02.sps
+FEATURE_VALTRN03 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn03.sps
+FEATURE_VALTST03 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst03.sps
+FEATURE_VALTRN04 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn04.sps
+FEATURE_VALTST04 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst04.sps
+FEATURE_VALTRN05 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn05.sps
+FEATURE_VALTST05 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst05.sps
+FEATURE_VALTRN06 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn06.sps
+FEATURE_VALTST06 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst06.sps
+FEATURE_VALTRN07 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn07.sps
+FEATURE_VALTST07 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst07.sps
+FEATURE_VALTRN08 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn08.sps
+FEATURE_VALTST08 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst08.sps
+FEATURE_VALTRN09 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn09.sps
+FEATURE_VALTST09 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst09.sps
+FEATURE_VALTRN10 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn10.sps
+FEATURE_VALTST10 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst10.sps
+FEATURE_VALTRN11 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn11.sps
+FEATURE_VALTST11 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst11.sps
+FEATURE_VALTRN12 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn12.sps
+FEATURE_VALTST12 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst12.sps
+FEATURE_VALTRN13 := $(DIR_FEATURE)/$(FEATURE_NAME).valtrn13.sps
+FEATURE_VALTST13 := $(DIR_FEATURE)/$(FEATURE_NAME).valtst13.sps
 
-FEATURE_TRN00 := $(DIR_FEATURE)/$(FEATURE_NAME).trn00.ffm
-FEATURE_TST00 := $(DIR_FEATURE)/$(FEATURE_NAME).tst00.ffm
-FEATURE_TRN01 := $(DIR_FEATURE)/$(FEATURE_NAME).trn01.ffm
-FEATURE_TST01 := $(DIR_FEATURE)/$(FEATURE_NAME).tst01.ffm
-FEATURE_TRN02 := $(DIR_FEATURE)/$(FEATURE_NAME).trn02.ffm
-FEATURE_TST02 := $(DIR_FEATURE)/$(FEATURE_NAME).tst02.ffm
-FEATURE_TRN03 := $(DIR_FEATURE)/$(FEATURE_NAME).trn03.ffm
-FEATURE_TST03 := $(DIR_FEATURE)/$(FEATURE_NAME).tst03.ffm
-FEATURE_TRN04 := $(DIR_FEATURE)/$(FEATURE_NAME).trn04.ffm
-FEATURE_TST04 := $(DIR_FEATURE)/$(FEATURE_NAME).tst04.ffm
-FEATURE_TRN05 := $(DIR_FEATURE)/$(FEATURE_NAME).trn05.ffm
-FEATURE_TST05 := $(DIR_FEATURE)/$(FEATURE_NAME).tst05.ffm
-FEATURE_TRN06 := $(DIR_FEATURE)/$(FEATURE_NAME).trn06.ffm
-FEATURE_TST06 := $(DIR_FEATURE)/$(FEATURE_NAME).tst06.ffm
-FEATURE_TRN07 := $(DIR_FEATURE)/$(FEATURE_NAME).trn07.ffm
-FEATURE_TST07 := $(DIR_FEATURE)/$(FEATURE_NAME).tst07.ffm
-FEATURE_TRN08 := $(DIR_FEATURE)/$(FEATURE_NAME).trn08.ffm
-FEATURE_TST08 := $(DIR_FEATURE)/$(FEATURE_NAME).tst08.ffm
-FEATURE_TRN08 := $(DIR_FEATURE)/$(FEATURE_NAME).trn08.ffm
-FEATURE_TST08 := $(DIR_FEATURE)/$(FEATURE_NAME).tst08.ffm
-FEATURE_TRN09 := $(DIR_FEATURE)/$(FEATURE_NAME).trn09.ffm
-FEATURE_TST09 := $(DIR_FEATURE)/$(FEATURE_NAME).tst09.ffm
-FEATURE_TRN10 := $(DIR_FEATURE)/$(FEATURE_NAME).trn10.ffm
-FEATURE_TST10 := $(DIR_FEATURE)/$(FEATURE_NAME).tst10.ffm
-FEATURE_TRN11 := $(DIR_FEATURE)/$(FEATURE_NAME).trn11.ffm
-FEATURE_TST11 := $(DIR_FEATURE)/$(FEATURE_NAME).tst11.ffm
-FEATURE_TRN12 := $(DIR_FEATURE)/$(FEATURE_NAME).trn12.ffm
-FEATURE_TST12 := $(DIR_FEATURE)/$(FEATURE_NAME).tst12.ffm
-FEATURE_TRN13 := $(DIR_FEATURE)/$(FEATURE_NAME).trn13.ffm
-FEATURE_TST13 := $(DIR_FEATURE)/$(FEATURE_NAME).tst13.ffm
+FEATURE_TRN00 := $(DIR_FEATURE)/$(FEATURE_NAME).trn00.sps
+FEATURE_TST00 := $(DIR_FEATURE)/$(FEATURE_NAME).tst00.sps
+FEATURE_TRN01 := $(DIR_FEATURE)/$(FEATURE_NAME).trn01.sps
+FEATURE_TST01 := $(DIR_FEATURE)/$(FEATURE_NAME).tst01.sps
+FEATURE_TRN02 := $(DIR_FEATURE)/$(FEATURE_NAME).trn02.sps
+FEATURE_TST02 := $(DIR_FEATURE)/$(FEATURE_NAME).tst02.sps
+FEATURE_TRN03 := $(DIR_FEATURE)/$(FEATURE_NAME).trn03.sps
+FEATURE_TST03 := $(DIR_FEATURE)/$(FEATURE_NAME).tst03.sps
+FEATURE_TRN04 := $(DIR_FEATURE)/$(FEATURE_NAME).trn04.sps
+FEATURE_TST04 := $(DIR_FEATURE)/$(FEATURE_NAME).tst04.sps
+FEATURE_TRN05 := $(DIR_FEATURE)/$(FEATURE_NAME).trn05.sps
+FEATURE_TST05 := $(DIR_FEATURE)/$(FEATURE_NAME).tst05.sps
+FEATURE_TRN06 := $(DIR_FEATURE)/$(FEATURE_NAME).trn06.sps
+FEATURE_TST06 := $(DIR_FEATURE)/$(FEATURE_NAME).tst06.sps
+FEATURE_TRN07 := $(DIR_FEATURE)/$(FEATURE_NAME).trn07.sps
+FEATURE_TST07 := $(DIR_FEATURE)/$(FEATURE_NAME).tst07.sps
+FEATURE_TRN08 := $(DIR_FEATURE)/$(FEATURE_NAME).trn08.sps
+FEATURE_TST08 := $(DIR_FEATURE)/$(FEATURE_NAME).tst08.sps
+FEATURE_TRN09 := $(DIR_FEATURE)/$(FEATURE_NAME).trn09.sps
+FEATURE_TST09 := $(DIR_FEATURE)/$(FEATURE_NAME).tst09.sps
+FEATURE_TRN10 := $(DIR_FEATURE)/$(FEATURE_NAME).trn10.sps
+FEATURE_TST10 := $(DIR_FEATURE)/$(FEATURE_NAME).tst10.sps
+FEATURE_TRN11 := $(DIR_FEATURE)/$(FEATURE_NAME).trn11.sps
+FEATURE_TST11 := $(DIR_FEATURE)/$(FEATURE_NAME).tst11.sps
+FEATURE_TRN12 := $(DIR_FEATURE)/$(FEATURE_NAME).trn12.sps
+FEATURE_TST12 := $(DIR_FEATURE)/$(FEATURE_NAME).tst12.sps
+FEATURE_TRN13 := $(DIR_FEATURE)/$(FEATURE_NAME).trn13.sps
+FEATURE_TST13 := $(DIR_FEATURE)/$(FEATURE_NAME).tst13.sps
 
 FEATURES := $(FEATURE_TRN00) $(FEATURE_TRN01) $(FEATURE_TRN02) $(FEATURE_TRN03)\
             $(FEATURE_TRN04) $(FEATURE_TRN05) $(FEATURE_TRN06) $(FEATURE_TRN07)\
@@ -74,7 +72,7 @@ FEATURES := $(FEATURE_TRN00) $(FEATURE_TRN01) $(FEATURE_TRN02) $(FEATURE_TRN03)\
             $(FEATURE_TST10) $(FEATURE_TST11) $(FEATURE_TST12) $(FEATURE_TST13)
 
 $(FEATURES): $(DATA_TRN) $(DATA_TST) $(LABEL_TRN) | $(DIR_FEATURE)
-	./src/generate_feature9_ffm.py --train-file $< \
+	./src/generate_feature9.py --train-file $< \
                                --label-file $(lastword $^) \
                                --test-file $(word 2, $^) \
                                --feature-dir $(DIR_FEATURE) \
